[gd_scene load_steps=10 format=2]

[ext_resource path="res://images/zombie_n_skeleton2.png" type="Texture" id=1]
[ext_resource path="res://scripts/zumbi.gd" type="Script" id=2]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 128, 32, 64 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 32, 128, 32, 64 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 64, 128, 32, 64 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 64, 192, 32, 64 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ) ],
"loop": true,
"name": "andar",
"speed": 5.0
}, {
"frames": [ SubResource( 10 ) ],
"loop": true,
"name": "morte",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=5]

[sub_resource type="CapsuleShape2D" id=7]

[node name="zumbi" type="StaticBody2D"]
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="." groups=["zumbi"]]
frames = SubResource( 4 )
animation = "morte"
playing = true

[node name="corpozumbi" type="Area2D" parent="." groups=["zumbi"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="corpozumbi" groups=["zumbi"]]
position = Vector2( 1, 14 )
shape = SubResource( 5 )

[node name="mortezumbi" type="Area2D" parent="." groups=["zumbi"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="mortezumbi" groups=["zumbi"]]
position = Vector2( 1, 14 )
shape = SubResource( 7 )

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="body_entered" from="corpozumbi" to="." method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="mortezumbi" to="." method="_on_mortezumbi_body_entered"]
